{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Touch",
            "id": "1f6fd0e4-1855-45a4-9c5a-2517caff66dc",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "1ad4c360-6c59-4fd6-87a2-79afb6681dac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "7eef8cfd-7e9d-4f7b-96c4-5141999a8459",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "00ca20c6-ec06-4057-9c22-842b9124888f",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "718e15b5-4ee5-4198-9061-58546c5cb13c",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}